# ai-support-automation

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  eval.yml
alembic/: env.py
alembic/versions/: ff61c2041388_create_tickets_table.py
app/: config.py  dependencies.py  logging_config.py  main.py  models.py  schemas.py
app/api/routes/: health.py  tickets.py
app/llm/: anthropic_client.py  base.py  prompts.py
app/mcp/: server.py
app/services/: ticket_pipeline.py
eval/: faithfulness.py  golden_set.json  run_eval.py
fixtures/: sample_tickets.json
scripts/: seed.py
tests/: conftest.py  fakes.py  test_anthropic_client.py  test_error_handling.py  test_mcp_server.py  test_models.py  test_ticket_pipeline.py  test_tickets_api.py
